--- a/TaiKang.Core/TaiKang.Core.csproj
+++ b/TaiKang.Core/TaiKang.Core.csproj
@@ -200,10 +200,13 @@
     <Compile Include="Storage\IBinaryObjectManager.cs" />
     <Compile Include="Storage\BinaryObject.cs" />
     <Compile Include="Tk\Banner.cs" />
+    <Compile Include="Tk\ClassifiedContent.cs" />
     <Compile Include="Tk\CompanyIntroduce.cs" />
     <Compile Include="Timing\ITimeZoneService.cs" />
     <Compile Include="Timing\TimeZoneService.cs" />
     <Compile Include="Tk\JobChance.cs" />
+    <Compile Include="Tk\Material.cs" />
+    <Compile Include="Tk\Product.cs" />
     <Compile Include="Validation\ValidationHelper.cs" />
     <Compile Include="Web\IWebUrlService.cs" />
     <Compile Include="Web\WebUrlService.cs" />
