--- a/Tools/TaiKang.Migrator/App.config
+++ b/Tools/TaiKang.Migrator/App.config
@@ -13,7 +13,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Default" connectionString="Server=localhost; Database=TaiKang; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=(localdb)\MSSQLLocalDB; Database=TaiKang; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
