should be ignored commit

--- a/TaiKang.Web/Web.config
+++ b/TaiKang.Web/Web.config
@@ -181,6 +181,10 @@
         <assemblyIdentity name="Microsoft.Owin.StaticFiles" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.11.0" newVersion="8.0.11.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
