--- a/Tools/TaiKang.Migrator/packages.config
+++ b/Tools/TaiKang.Migrator/packages.config
@@ -14,12 +14,15 @@
   <package id="Castle.Windsor" version="4.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.DynamicFilters" version="2.7.0" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
+  <package id="MySql.Data" version="6.9.11" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.9.11" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
